@@ -1,21 +1,23 @@
 package me.xaxis.serverhubsplus.utils;
 
+import com.google.gson.JsonObject;
+import com.google.gson.JsonParser;
 import lombok.SneakyThrows;
 import me.xaxis.serverhubsplus.Options;
 import me.xaxis.serverhubsplus.ServerHubsPlus;
 
 import java.io.*;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.util.Scanner;
+import java.util.logging.Level;
 
 public class UpdateChecker {
 
-
     private final ServerHubsPlus plugin;
     private static final String API_URL = "https://api.spigotmc.org/legacy/update.php?resource=78072";
-    private static final String API_DOWNLOAD_LINK = "https://api.spiget.org/v2/resources/78072/download";
-    private String version;
+    private static final URI API_DOWNLOAD_LINK = URI.create("https://api.spiget.org/v2/resources/78072/download");
 
     @SneakyThrows
     public UpdateChecker(ServerHubsPlus plugin){
@@ -28,48 +30,67 @@ public class UpdateChecker {
             return;
         }
 
-       update();
+        update();
 
+    }
+
+    private double getWebVersion(){
+        int resourceId = 78072;
+        String apiUrl = "https://api.spiget.org/v2/resources/" + resourceId + "/versions/latest";
+
+        try {
+            URL url = new URL(apiUrl);
+            HttpURLConnection con = (HttpURLConnection) url.openConnection();
+            con.setRequestMethod("GET");
+
+            try (BufferedReader in = new BufferedReader(new InputStreamReader(con.getInputStream()))) {
+                JsonObject response = JsonParser.parseReader(in).getAsJsonObject();
+                String version = response.get("name").getAsString();
+                return Double.parseDouble(version);
+            }
+
+        } catch (IOException e) {
+            plugin.getLogger().log(Level.SEVERE, "Failed to retrieve website version: " + e.getMessage());
+            return 0;
+        }
     }
 
     private void update(){
 
         plugin.getServer().getScheduler().runTaskAsynchronously(plugin, ()->{
+            try (InputStream versionStream = new URL(API_URL).openStream(); Scanner ignored = new Scanner(versionStream)) {
 
-            InputStream versionStream;
-            try {
-                versionStream = new URL(API_URL).openStream();
+                double webVersion = getWebVersion();
+
+                double pluginVersion;
+
+                try{
+                    pluginVersion = Double.parseDouble(plugin.getDescription().getVersion());
+                }catch (Exception e){
+                    plugin.getLogger().log(Level.SEVERE, "Failed to convert plugin version to a double! Please report this error to the developer! #CNCSTD");
+                    return;
+                }
+
+                if(webVersion >= pluginVersion){
+
+                    plugin.getLogger().log(Level.FINE,"No new updates found! You are running the latest version!");
+                    return;
+                }
+
+                if(!Options.AUTO_UPDATE_ENABLED.toBoolean(plugin)){
+                    plugin.getLogger().log(Level.WARNING,"New update found! \nPlease download the new version here:" +
+                            " https://www.spigotmc.org/resources/serverhubsplus-great-hub-plugin-download-now.78072/");
+                    return;
+                }
+
+                plugin.getLogger().log(Level.FINE,"Downloading file...");
+                downloadFile();
+                plugin.getLogger().log(Level.FINE,"Installation Complete! \nPlease reload/restart the server for changes to take effect.");
             } catch (IOException e) {
-                plugin.getServer().getConsoleSender().sendMessage(Utils.chat("&4Error whilst checking for update: failed to open URL stream."));
-                return;
+                plugin.getLogger().log(Level.SEVERE,"Error whilst checking for update: failed to open URL stream.");
             }
-
-            Scanner scanner = new Scanner(versionStream);
-
-            if(scanner.hasNext()){
-                version = scanner.next();
-            }
-
-            if(plugin.getDescription().getVersion().equals(version)){
-
-                plugin.getServer().getConsoleSender().sendMessage(Utils.chat("&aNo new updates found! You are running the latest version!"));
-                return;
-            }
-
-            if(!Options.AUTO_UPDATE_ENABLED.toBoolean(plugin)){
-
-                plugin.getServer().getConsoleSender().sendMessage(Utils.chat("&aNew update found! \nPlease download the new version here: https://www.spigotmc.org/resources/serverhubsplus-great-hub-plugin-download-now.78072/"));
-
-                return;
-            }
-
-
-            plugin.getServer().getConsoleSender().sendMessage(Utils.chat("&aDownloading file..."));
-            downloadFile();
-            plugin.getServer().getConsoleSender().sendMessage(Utils.chat("&aInstallation Complete! \nPlease reload/restart the server for changes to take effect."));
 
         });
-
     }
 
     @SneakyThrows
@@ -77,24 +98,25 @@ public class UpdateChecker {
 
         File file = new File("./plugins", "ServerHubsPlus-0.jar");
 
-        URL url = new URL(API_DOWNLOAD_LINK);
-        HttpURLConnection http = (HttpURLConnection) url.openConnection();
-        BufferedInputStream in = new BufferedInputStream(http.getInputStream());
-        FileOutputStream fos = new FileOutputStream(file);
-        BufferedOutputStream bout = new BufferedOutputStream(fos, 1024);
-        byte[] buffer = new byte[1024];
-        int read;
-
-        while((read = in.read(buffer, 0, 1024)) >= 0){
-            bout.write(buffer, 0, read);
+        HttpURLConnection http = (HttpURLConnection) API_DOWNLOAD_LINK.toURL().openConnection();
+        if (http.getResponseCode() != HttpURLConnection.HTTP_OK) {
+            throw new IOException("Server returned HTTP response code: " + http.getResponseCode());
         }
 
-        bout.close();
+        InputStream in = http.getInputStream();
+        OutputStream out = new FileOutputStream(file);
+
+        byte[] buffer = new byte[1024];
+        int length;
+
+        while ((length = in.read(buffer)) != -1) {
+            out.write(buffer, 0, length);
+        }
+
         in.close();
-        fos.close();
+        out.close();
 
+        plugin.getLogger().log(Level.FINE,"Installation Complete! \nPlease reload/restart the server for changes to take effect.");
     }
-
-
 
 }
